Add write permissions for mirror action
https://stackoverflow.com/a/75881309

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -12,6 +12,8 @@ jobs:
   mirror:
     runs-on: ubuntu-latest
     name: mirror
+    permissions:
+      contents: write
     steps:
       - name: mirror
         id: mirror
