--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -4,8 +4,8 @@ on:
     branches:
         - __mirror
   schedule:
-    # Run everyday at 3 AM UTC
-    - cron: '0 3 * * *'
+    # Run everyday at 3 AM UTC on Sunday
+    - cron: '0 3 * * 0'
   workflow_dispatch:
 
 jobs:
