Use forked mirror action
Testing forked mirror action, it should fail since we intentionally made master diverge

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: mirror
         id: mirror
-        uses: bridgelightcloud/github-mirror-action@v3
+        uses: Libre-SOC-mirrors/github-mirror-action@main
         with:
           origin: 'https://git.libre-soc.org/git/soc.git'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
